# oss-radar

./: .env.example  .gitignore  AGENTS.md  ANALYSIS-TASK-005.md  ARCH.md  PRD.md  README.md  SCRAPER_REVIEW_TASK_003.md  SECURITY.md  SECURITY_REVIEW_TASK_008.md  SHADOW-REPORT.md  TASK_001_SCRAPING_REVIEW.md  TEST_AUDIT_FINDINGS.md  audit-report-task-003.md  ci_audit_task_008.txt  com.dubsopenhub.oss-radar.plist  install.sh  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  daily.yml  test.yml  weekly.yml
.stampede/run-20260303-101326/logs/: worker-25606e.jsonl  worker-3d6ef9.jsonl  worker-8f0f82.jsonl  worker-adddbc.jsonl
.stampede/run-20260303-101326/results/: task-003.json  task-004.json  task-005.json  task-008.json
.stampede/run-20260303-144125/: state.json
.stampede/run-20260303-144125/claimed/: task-008.json
.stampede/run-20260303-144125/logs/: agent-682b41.jsonl  agent-6ac193.jsonl  agent-714663.jsonl  agent-808904.jsonl  agent-97dd5a.jsonl  agent-b0c890.jsonl  agent-c0d0db.jsonl  agent-fe50ce.jsonl  orchestrator.jsonl
.stampede/run-20260303-145737/: fleet.json  state.json
radar/: __init__.py  cli.py  config.py  db.py  filter.py  ladder.py  llm.py  mailer.py  models.py  pipeline.py  scorer.py  summarizer.py  synthetic.py
radar/email/: __init__.py  sender.py
radar/ranking/: __init__.py  filters.py  keywords.py  scorer.py
radar/scheduling/: __init__.py  scheduler.py
radar/scraper/: __init__.py  base.py  devto.py  hn.py  lobsters.py  reddit.py
radar/scraping/: __init__.py  base.py  devto.py  hackernews.py  http.py  lobsters.py  reddit.py
radar/storage/: __init__.py  database.py
tests/: conftest.py  test_cli.py  test_config.py  test_email.py  test_filter.py  test_llm.py  test_pipeline.py  test_ranking.py  test_scraping.py  test_storage.py  test_synthetic.py
(+70 files in other folders)
