[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-radar"
version = "1.0.0"
description = "OSS Opportunities Radar — developer pain-signal intelligence pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OSS Radar Team" }]
keywords = ["oss", "open-source", "radar", "maintainer", "intelligence"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "praw>=7.7",
    "httpx>=0.27",
    "tenacity>=8.2",
    "vaderSentiment>=3.3",
    "textblob>=0.18",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.1",
    "typer[all]>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
radar = "radar.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["radar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --timeout=30 --strict-markers -p no:randomly"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.coverage.run]
source = ["radar"]
omit = ["tests/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
